@@ -47,7 +47,14 @@ class Gem::Installer
 
   attr_reader :spec
 
+  @home_install_warning = false
+
   class << self
+
+    ##
+    # True if we've warned about ~/.gems install
+
+    attr_accessor :home_install_warning
 
     attr_writer :exec_format
 
@@ -103,30 +110,39 @@ class Gem::Installer
       raise Gem::InstallError, "invalid gem format for #{@gem}"
     end
 
+    begin
+      FileUtils.mkdir_p @gem_home
+    rescue Errno::EACCESS, Errno::ENOTDIR
+      # We'll divert to ~/.gems below
+    end
+
     if not File.writable? @gem_home or
         # TODO: Shouldn't have to test for existence of bindir; tests need it.
         (@gem_home.to_s == Gem.dir and File.exist? Gem.bindir and
-         not File.writable? Gem.bindir)
-      if options[:user_install] == false # You explicitly don't want to use ~
+         not File.writable? Gem.bindir) then
+      if options[:user_install] == false then # You don't want to use ~
         raise Gem::FilePermissionError, @gem_home
-      elsif options[:user_install].nil?
-        say "Warning: falling back to user-level install since #{@gem_home} and #{Gem.bindir} aren't both writable."
+      elsif options[:user_install].nil? then
+        unless self.class.home_install_warning then
+          say "Warning: falling back to ~/.gem install since #{@gem_home} and #{Gem.bindir} aren't both writable."
+          self.class.home_install_warning = true
+        end
       end
       options[:user_install] = true
     end
 
-    if options[:user_install]
+    if options[:user_install] then
       @gem_home = Gem.user_dir
 
       user_bin_dir = File.join(@gem_home, 'bin')
-      if !ENV['PATH'].split(':').include?(user_bin_dir)
+      unless ENV['PATH'].split(File::PATH_SEPARATOR).include? user_bin_dir then
         say "You don't have #{user_bin_dir} in your PATH."
         say "You won't be able to run gem-installed executables until you add it."
       end
 
-      FileUtils.mkdir_p @gem_home if ! File.directory? @gem_home
+      FileUtils.mkdir_p @gem_home unless File.directory? @gem_home
       # If it's still not writable, you've got issues.
-      raise Gem::FilePermissionError, @gem_home if ! File.writable? @gem_home
+      raise Gem::FilePermissionError, @gem_home unless File.writable? @gem_home
     end
 
     @spec = @format.spec
